# apache_beam_tutorial

./: README.md
apache_beam/: pipeline.py  pyproject.toml
