[tool.poetry]
name = "apache_beam_tes"
version = "0.1.0"
description = ""
authors = ["Ramzi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
apache-beam = {extras = ["gcp"], version = "^2.25.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
